--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,86 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    
+	<link href="https://rukminim1.flixcart.com/" rel="dns-prefetch" />
+	<link href="https://img1a.flixcart.com/" rel="dns-prefetch" />
+	<link rel="stylesheet" href="img1a.flixcart.com/www/linchpin/fk-cp-zion/css/app.chunk.a13c99.css" />
+
+	<link rel="preload" href="img1a.flixcart.com/www/linchpin/fk-cp-zion/img/fk-logo_9fddff.png" as="image">
+
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+	<meta property="fb:page_id" content="102988293558"/>
+	<meta property="fb:admins" content="658873552,624500995,100000233612389"/>
+	<meta name="robots" content="noodp" />
+
+	<link rel='shortcut icon' href="https://img1a.flixcart.com/www/promos/new/20150528-140547-favicon-retina.ico" />
+
+	<link type="application/opensearchdescription+xml" rel="search" href="osdd5e1f.html?v=2"/>
+
+	<meta property="og:type" content="website"/>
+	<meta name="og_site_name" property="og:site_name" content="Flipkart.com"/>
+	<!-- Appple Touch Icons -->
+	<link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.html"/>
+	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.html"/>
+	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.html"/>
+	<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.html"/>
+	<link rel="apple-touch-icon" href="apple-touch-icon-57x57.html"/>
+
+	<!-- Twitter Meta Data -->
+	<meta name='twitter:card' content="app">
+	<meta name="twitter:site" content="@flipkart">
+	<meta name="twitter:creator" content="@flipkart">
+	<meta name="twitter:title" content="All Categories - Buy Products Online at Best Price in India - All Categories | Flipkart.com">
+	<meta name='twitter:description' content="Shop for electronics, apparels & more using our Flipkart app Free shipping & COD.">
+
+	<meta name='twitter:app:country' content="in">
+	<meta name="al:ios:app_name" content="Flipkart">
+	<meta name="al:ios:app_store_id" content="742044692">
+	<meta name="twitter:app:name:iphone" content="Flipkart">
+	<meta name="twitter:app:id:iphone" content="742044692">
+	<meta name="twitter:app:url:iphone" content="http://dl.flipkart.com/dl/home?">
+	<meta name="twitter:app:name:ipad" content="Flipkart">
+	<meta name="twitter:app:id:ipad" content="742044692">
+	<meta name="twitter:app:url:ipad" content="http://dl.flipkart.com/dl/home?">
+	<meta name="twitter:app:name:googleplay" content="Flipkart">
+	<meta name="twitter:app:id:googleplay" content="com.flipkart.android">
+	<meta name="twitter:app:url:googleplay" content="http://dl.flipkart.com/dl/home?">
+	<style>
+		#container {
+			height: 100%;
+		}
+	</style>
+
+	<script src="img1a.flixcart.com/www/linchpin/fk-cp-zion/js/runtime.50f78a8d.js" defer crossorigin="anonymous"></script>
+	<script src="img1a.flixcart.com/www/linchpin/fk-cp-zion/js/vendor.chunk.5e4ece3d.js" defer crossorigin="anonymous"></script>
+	<script src="img1a.flixcart.com/www/linchpin/fk-cp-zion/js/app.chunk.e6d02ed5.js" defer crossorigin="anonymous"></script>
+
+		<link rel="stylesheet" href="img1a.flixcart.com/www/linchpin/fk-cp-zion/css/MultiWidgetPage.chunk.d31483.css" />
+
+
+	<title>All Categories - Buy Products Online at Best Price in India - All Categories | Flipkart.com</title>
+	<meta name="og_title" property="og:title" content="All Categories - Buy Products Online at Best Price in India - All Categories | Flipkart.com"/>
+
+        <meta name="Keywords" content="All Categories"/>
+
+    	<meta name="Description" property="og:description" content="All Categories - Buy Products Online at Best Price in India. India&#x27;s Leading E-commerce Company - Free Home Delivery - All Categories | Flipkart.com"/>
+
+        <meta name="robots" content="noindex"/>
+
+
+    <meta name="msvalidate.01" content="F4EEB3A0AFFDD385992A06E6920C0AC3" />
+
+
+
+
+	
+
+
+        <link href="https://www.flipkart.com/search?sid=fcn&amp;otracker=CLP_Filters&amp;p%5B%5D=facets.serviceability%5B%5D%3Dtrue&amp;p%5B%5D=facets.brand%5B%5D%3DSennheiser&amp;page=2" id="next-page-link-tag" rel="next">
+
+        <link href="amp/searchf11b.html?sid=fcn&amp;otracker=CLP_Filters&amp;p%5B%5D=facets.serviceability%5B%5D%3Dtrue&amp;p%5B%5D=facets.brand%5B%5D%3DSennheiser" rel="amphtml">
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
